# naming_my_baby

./: Pipfile  Readme.md  const.py  main.py  pyproject.toml  result.csv
