[tool.poetry]
name = "naming-my-baby"
version = "1.0.0"
description = "赤ちゃん名づけのサイトの検索結果を CSV に出力するツール"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "naming_my_baby"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
